[package]
name = "tax"
version = "0.1.0"
authors = ["James Hay <pokinoice@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"